--- a/assets/catppuccin.css
+++ b/assets/catppuccin.css
@@ -48,6 +48,7 @@
   font-family: "Inter", sans-serif;
   background-color: var(--base);
   color: var(--text);
+  position: relative;
 
   .hidden {
     display: none;
@@ -211,6 +212,38 @@
   .reveal div.slide-background {
     background-color: var(--base) !important;
   }
+}
+
+.backgrounds::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: radial-gradient(
+    circle at 0 0,
+    var(--surface0) 3px,
+    transparent 1px
+  );
+  background-size: 30px 30px;
+  background-position: 10px 10px;
+  mask: linear-gradient(
+    to right,
+    black 0%,
+    black 10%,
+    transparent 30%,
+    transparent 100%
+  );
+  -webkit-mask: linear-gradient(
+    to right,
+    black 0%,
+    black 10%,
+    transparent 30%,
+    transparent 100%
+  );
+  pointer-events: none;
+  z-index: 1;
 }
 
 @media print {
