--- a/templates/template.html
+++ b/templates/template.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -11,7 +11,6 @@
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="{{highlight_theme}}" />
-    <link rel="stylesheet" href="/src/presentation.ts" />
   </head>
   <body>
     <div class="reveal">
