:lipstick: Add basic sticky headers

--- a/templates/template.html
+++ b/templates/template.html
@@ -27,6 +27,7 @@
         </section>
       </div>
     </div>
+    <div id="sticky-header" class="sticky-header"></div>
 
     <!-- Bundled JavaScript -->
     <script type="module" src="/src/presentation.ts"></script>
